# Synapped

./: CMakeLists.txt  LICENSE  README.md
include/architecture/: Activation.hpp  NeuralNetwork.h  NeuralNetwork.hpp  Neuron.h  Neuron.hpp  Synapse.hpp
include/enums/: ActivationType.hpp
include/gui/: MainWindow.h  MainWindow.hpp  NeuralCanvas.h
include/utils/: generateId.hpp  generateRandomNumber.hpp  log.hpp  readCSV.h
resources/: sample_data.csv
src/: main.cpp
src/architecture/: Activation.cpp  NeuralNetwork.cpp  Neuron.cpp  Synapse.cpp
src/gui/: MainWindow.cpp  NeuralCanvas.cpp
src/utils/: generateId.cpp  generateRandomNumber.cpp  log.cpp  readCSV.cpp
